--- a/index.html
+++ b/index.html
@@ -1,1 +1,48 @@
-privacy
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: sans-serif;
+            line-height: 1.6;
+            margin: 20px;
+        }
+        h1 {
+            color: #333;
+        }
+        h2 {
+            color: #555;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            padding: 20px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy for Calculator</h1>
+        <p>This privacy policy governs your use of the software application Calculator ("Application") for mobile devices that was created by AzMeer.</p>
+
+        <h2>What information does the Application obtain and how is it used?</h2>
+        <p>The Application does not collect or transmit any personally identifiable information about you, such as your name, address, phone number or email address.</p>
+
+        <h3>Third-party Services</h3>
+        <p>The Application uses third-party services that may collect information used to identify you. We use Google Mobile Ads (AdMob) for advertising purposes. AdMob may collect and use data for advertising purposes. For more information on how Google collects and uses your data, please review their privacy policy:</p>
+        <p><a href="https://policies.google.com/privacy" target="_blank">Google Privacy Policy</a></p>
+
+        <h2>Data Security</h2>
+        <p>We are concerned about safeguarding the confidentiality of your information. We provide physical, electronic, and procedural safeguards to protect information we process and maintain. For example, we limit access to this information to authorized employees and contractors who need to know that information in order to operate, develop or improve our Application. Please be aware that, although we endeavor to provide reasonable security for information we process and maintain, no security system can prevent all potential security breaches.</p>
+
+        <h2>Changes</h2>
+        <p>This Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.</p>
+
+        <h2>Contact us</h2>
+        <p>If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at <a>mailto:teamabhpk@gmail.com</a>.</p>
+    </div>
+</body>
+</html>
