--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <p>This Privacy Policy may be updated from time to time for any reason. We will notify you of any changes to our Privacy Policy by posting the new Privacy Policy here. You are advised to consult this Privacy Policy regularly for any changes, as continued use is deemed approval of all changes.</p>
 
         <h2>Contact us</h2>
-        <p>If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at <a>mailto:teamabhpk@gmail.com</a>.</p>
+        <p>If you have any questions regarding privacy while using the Application, or have questions about our practices, please contact us via email at <a href="mailto:teamabhpk@gmail.com">teamabhpk@gmail.com</a>.</p>
     </div>
 </body>
 </html>
